# loopint

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/loopint/: __init__.py  ebenum.py  loopint.py  looplist.py  weighted_value.py
tests/: test_loopint.py  test_loopint_properties.py  test_looplist.py
